tests/baselines/reference/emitArrowFunctionWhenUsingArguments04_ES6(strict=true).errors.txt
emitArrowFunctionWhenUsingArguments04_ES6.ts(2,9): error TS1100: Invalid use of 'arguments' in strict mode.
emitArrowFunctionWhenUsingArguments04_ES6.ts(2,9): error TS7034: Variable 'arguments' implicitly has type 'any' in some locations where its type cannot be determined.
emitArrowFunctionWhenUsingArguments04_ES6.ts(3,19): error TS7005: Variable 'arguments' implicitly has an 'any' type.


==== emitArrowFunctionWhenUsingArguments04_ES6.ts (3 errors) ====
    function f() {
        var arguments;
            ~~~~~~~~~
!!! error TS1100: Invalid use of 'arguments' in strict mode.
            ~~~~~~~~~
!!! error TS7034: Variable 'arguments' implicitly has type 'any' in some locations where its type cannot be determined.
        var a = () => arguments;
                      ~~~~~~~~~
!!! error TS7005: Variable 'arguments' implicitly has an 'any' type.
    }